# RSI_ML

./: Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml
crates/rsi_ml/: Cargo.toml
crates/rsi_ml/benches/: matmul.rs  ops.rs
crates/rsi_ml/examples/: genome_search_demo.rs  matmul_bench.rs  mini_attention_demo.rs  prometheus_demo.rs  sleep_phase_demo.rs  swarm_coordinator.rs  swarm_worker.rs  tiny_chat_demo.rs  tiny_decoder_demo.rs  tiny_lm_train.rs  transformer_block_demo.rs  two_layer_mlp.rs  two_layer_mlp_relu.rs
crates/rsi_ml/src/: data.rs  genome.rs  lib.rs  meta_oracle.rs  tokenizer.rs  train.rs
crates/rsi_ml_autograd/: Cargo.toml
crates/rsi_ml_autograd/src/: lib.rs
crates/rsi_ml_core/: Cargo.toml
crates/rsi_ml_core/src/: broadcast.rs  lib.rs
crates/rsi_ml_ops/: Cargo.toml
crates/rsi_ml_ops/src/: lib.rs
crates/rsi_ml_optim/: Cargo.toml
crates/rsi_ml_optim/src/: lib.rs
docs/: BENCHMARKS.md  GPU_BACKEND_PLAN.md
scripts/: profile_matmul.ps1
